--- a/PORTFOLIO COLLAB/index.html
+++ b/PORTFOLIO COLLAB/index.html
@@ -11,12 +11,21 @@
 <header>
     <h1>Your Name</h1>
     <p>Web Developer | Designer</p>
+    <div class="header-actions">
+        <a href="resume.pdf" class="resume-btn" download>Download Resume</a>
+        <div class="social-links">
+            <a href="#" aria-label="GitHub">GitHub</a>
+            <a href="#" aria-label="LinkedIn">LinkedIn</a>
+            <a href="#" aria-label="Twitter">Twitter</a>
+        </div>
+    </div>
 </header>
 
 <nav>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">Dark</button>
 </nav>
 
 <section id="about" class="container">
@@ -27,26 +36,37 @@
     </p>
 </section>
 
+<section id="skills" class="container">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+        <li>HTML &amp; CSS</li>
+        <li>JavaScript</li>
+        <li>Responsive Design</li>
+        <li>Accessibility</li>
+        <li>React (basic)</li>
+    </ul>
+</section>
+
 <section id="projects" class="container">
     <h2>Projects</h2>
 
     <div class="project-grid">
         <div class="card">
             <h3>Project One</h3>
-            <p>HTML & CSS website</p>
-            <button onclick="showAlert()">View</button>
+            <p>HTML &amp; CSS website</p>
+            <button class="view-btn" data-title="Project One" data-desc="HTML & CSS website">View</button>
         </div>
 
         <div class="card">
             <h3>Project Two</h3>
             <p>Responsive portfolio</p>
-            <button onclick="showAlert()">View</button>
+            <button class="view-btn" data-title="Project Two" data-desc="Responsive portfolio">View</button>
         </div>
 
         <div class="card">
             <h3>Project Three</h3>
             <p>Basic system UI</p>
-            <button onclick="showAlert()">View</button>
+            <button class="view-btn" data-title="Project Three" data-desc="Basic system UI">View</button>
         </div>
     </div>
 </section>
@@ -55,11 +75,38 @@
     <h2>Contact</h2>
     <p>Email: yourname@email.com</p>
     <p>Phone: +123 456 789</p>
+
+    <form id="contact-form">
+        <label>
+            Name
+            <input type="text" name="name" required>
+        </label>
+        <label>
+            Email
+            <input type="email" name="email" required>
+        </label>
+        <label>
+            Message
+            <textarea name="message" rows="4" required></textarea>
+        </label>
+        <button type="submit">Send Message</button>
+    </form>
 </section>
 
 <footer>
     <p>© 2026 Your Name</p>
 </footer>
+
+<!-- Project detail modal -->
+<div id="project-modal" class="modal" aria-hidden="true">
+    <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+        <button class="modal-close" aria-label="Close">×</button>
+        <h3 id="modal-title">Project Title</h3>
+        <p id="modal-desc">Project description goes here.</p>
+    </div>
+</div>
+
+<button id="back-to-top" aria-label="Back to top">↑</button>
 
 <script src="script.js"></script>
 </body>
